Remove guava usage from testplugins (#3912)